<resources>
    <string name="app_name">NavigationDrawer_Fragment_Program</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="calculator">Calculator</string>
    <string name="converter">Converter</string>

    <string name="_4">4</string>
    <string name="_1">1</string>
    <string name="_decimalPoint">.</string>
    <string name="ce">CE</string>
    <string name="c">C</string>
    <string name="delete">delete</string>
    <string name="_Div">/</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_Mul">*</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_Sub">-</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_Add">+</string>
    <string name="_Sign">+/-</string>
    <string name="_0">0</string>
    <string name="_Equal">=</string>

    <string name="number">Number</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="result">Result</string>
    <string name="convert">Convert</string>
</resources>